test-suite/valid/basic/string.jyml
# Basic string test
"hello world"