test-suite/invalid/syntax/unclosed-string.jyml
# Invalid: unclosed string
"hello world